--- a/package.json
+++ b/package.json
@@ -11,12 +11,16 @@
   },
   "dependencies": {
     "@expo/webpack-config": "^0.17.0",
+    "@react-navigation/material-top-tabs": "^6.6.5",
     "expo": "~46.0.21",
     "expo-status-bar": "~1.4.0",
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-native": "0.69.9",
-    "react-native-web": "~0.18.7"
+    "react-native-pager-view": "5.4.24",
+    "react-native-tab-view": "^3.5.2",
+    "react-native-web": "~0.18.7",
+    "react-router-native": "^6.21.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
