--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/material-top-tabs": "^6.6.5",
     "expo": "~46.0.21",
     "expo-status-bar": "~1.4.0",
+    "formik": "^2.4.5",
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-native": "0.69.9",
