--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-native-pager-view": "5.4.24",
     "react-native-tab-view": "^3.5.2",
     "react-native-web": "~0.18.7",
-    "react-router-native": "^6.21.1"
+    "react-router-native": "^6.21.1",
+    "yup": "^1.3.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
