--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-native-tab-view": "^3.5.2",
     "react-native-web": "~0.18.7",
     "react-router-native": "^6.21.1",
-    "yup": "^1.3.3"
+    "yup": "^1.3.3",
+    "expo-font": "~10.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
