--- a/package.json
+++ b/package.json
@@ -10,11 +10,15 @@
     "lint": "eslint ./src/**/*.{js,jsx} App.js --no-error-on-unmatched-pattern"
   },
   "dependencies": {
+    "@apollo/client": "^3.8.8",
+    "@expo/metro-config": "^0.4.0",
     "@expo/webpack-config": "^0.17.0",
     "@react-navigation/material-top-tabs": "^6.6.5",
     "expo": "~46.0.21",
+    "expo-font": "~10.2.0",
     "expo-status-bar": "~1.4.0",
     "formik": "^2.4.5",
+    "graphql": "^15.8.0",
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-native": "0.69.9",
@@ -22,8 +26,7 @@
     "react-native-tab-view": "^3.5.2",
     "react-native-web": "~0.18.7",
     "react-router-native": "^6.21.1",
-    "yup": "^1.3.3",
-    "expo-font": "~10.2.0"
+    "yup": "^1.3.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
