--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@expo/metro-config": "^0.4.0",
     "@expo/webpack-config": "^0.17.0",
     "@react-navigation/material-top-tabs": "^6.6.5",
+    "dotenv": "^16.3.1",
     "expo": "~46.0.21",
     "expo-font": "~10.2.0",
     "expo-status-bar": "~1.4.0",
