--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "react-native-tab-view": "^3.5.2",
     "react-native-web": "~0.18.7",
     "react-router-native": "^6.21.1",
-    "yup": "^1.3.3"
+    "yup": "^1.3.3",
+    "@react-native-async-storage/async-storage": "~1.17.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
