--- a/package.json
+++ b/package.json
@@ -7,12 +7,26 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "lint": "eslint ./src/**/*.{js,jsx} App.js --no-error-on-unmatched-pattern"
+    "lint": "eslint ./src/**/*.{js,jsx} App.js --no-error-on-unmatched-pattern",
+    "test": "jest"
+  },
+  "jest": {
+    "preset": "jest-expo",
+    "transform": {
+      "^.+\\.jsx?$": "babel-jest"
+    },
+    "transformIgnorePatterns": [
+      "node_modules/(?!((jest-)?react-native|@react-native(-community)?)|expo(nent)?|@expo(nent)?/.*|@expo-google-fonts/.*|react-navigation|@react-navigation/.*|@unimodules/.*|unimodules|sentry-expo|native-base|react-native-svg|react-router-native)"
+    ],
+    "setupFilesAfterEnv": [
+      "<rootDir>/setupTests.js"
+    ]
   },
   "dependencies": {
     "@apollo/client": "^3.8.8",
     "@expo/metro-config": "^0.4.0",
     "@expo/webpack-config": "^0.17.0",
+    "@react-native-async-storage/async-storage": "~1.17.3",
     "@react-navigation/material-top-tabs": "^6.6.5",
     "dotenv": "^16.3.1",
     "expo": "~46.0.21",
@@ -27,15 +41,20 @@
     "react-native-tab-view": "^3.5.2",
     "react-native-web": "~0.18.7",
     "react-router-native": "^6.21.1",
-    "yup": "^1.3.3",
-    "@react-native-async-storage/async-storage": "~1.17.3"
+    "yup": "^1.3.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
     "@babel/eslint-parser": "^7.23.3",
+    "@testing-library/jest-native": "^5.4.3",
+    "@testing-library/react-native": "^12.4.3",
     "eslint": "^8.56.0",
+    "eslint-plugin-jest": "^27.6.1",
     "eslint-plugin-react": "^7.33.2",
-    "eslint-plugin-react-native": "^4.1.0"
+    "eslint-plugin-react-native": "^4.1.0",
+    "jest": "^29.7.0",
+    "jest-expo": "^49.0.0",
+    "react-test-renderer": "^18.2.0"
   },
   "private": true
 }
