--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "dotenv": "^16.3.1",
     "expo": "~46.0.21",
     "expo-font": "~10.2.0",
+    "expo-linking": "^6.0.0",
     "expo-status-bar": "~1.4.0",
     "formik": "^2.4.5",
     "graphql": "^15.8.0",
