--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@expo/webpack-config": "^0.17.0",
     "@react-native-async-storage/async-storage": "~1.17.3",
     "@react-navigation/material-top-tabs": "^6.6.5",
+    "date-fns": "^3.1.0",
     "dotenv": "^16.3.1",
     "expo": "~46.0.21",
     "expo-font": "~10.2.0",
