--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@expo/metro-config": "^0.4.0",
     "@expo/webpack-config": "^0.17.0",
     "@react-native-async-storage/async-storage": "~1.17.3",
+    "@react-native-picker/picker": "2.4.2",
     "@react-navigation/material-top-tabs": "^6.6.5",
     "date-fns": "^3.1.0",
     "dotenv": "^16.3.1",
@@ -40,6 +41,8 @@
     "react-dom": "18.0.0",
     "react-native": "0.69.9",
     "react-native-pager-view": "5.4.24",
+    "react-native-paper": "^5.11.7",
+    "react-native-safe-area-context": "^4.8.2",
     "react-native-tab-view": "^3.5.2",
     "react-native-web": "~0.18.7",
     "react-router-native": "^6.21.1",
