--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react-native-tab-view": "^3.5.2",
     "react-native-web": "~0.18.7",
     "react-router-native": "^6.21.1",
+    "use-debounce": "^10.0.0",
     "yup": "^1.3.3"
   },
   "devDependencies": {
